@@ -29,6 +29,9 @@
    - markus@cvs.openbsd.org 2001/04/05 20:01:10
      [clientloop.c]
      for ~R print message if server does not support rekeying. (and fix ~R).
+   - markus@cvs.openbsd.org 2001/04/05 21:02:46
+     [buffer.c]
+     better error message
 
 20010405
  - OpenBSD CVS Sync                                              
@@ -4901,4 +4904,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1071 2001/04/05 23:34:29 mouring Exp $
+$Id: ChangeLog,v 1.1072 2001/04/05 23:36:01 mouring Exp $
